--- a/src/Pages/faculty/Leave notice/facleavenotice.css
+++ b/src/Pages/faculty/Leave notice/facleavenotice.css
@@ -34,7 +34,7 @@ textarea {
     height: 200px;
 }
 button {
-    background-color: #4CAF50;
+    background-color:  #263159;
     color: white;
     border: none;
     padding: 10px 20px;
@@ -45,6 +45,17 @@ button {
 .course{
     background-color:#ECF9FF;
 }
-.leavenotice-btn{
-    background-color: #263159;
+
+.addnotice-icon{
+    font-size: 32px;
+    margin-right: 18px;
+    margin-top: 17px;
+    margin-left: 11px;
+    color:  #263159;
 }
+.leavenotice-form{
+    margin-top: 20px;
+}
+
+
+
