--- a/src/Pages/faculty/Material/material.css
+++ b/src/Pages/faculty/Material/material.css
@@ -1,9 +1,3 @@
-/* .studentdetailview{
-    background-color:#263159 ;
-} */
-
-
-
 * {
     box-sizing: border-box !important;
   }
@@ -65,7 +59,7 @@
   label {
     display: inline-block;
     margin-bottom: 0.5rem;
-    position: absolute;
+    /* position: absolute; */
     top: -10px;
     left: 30px;
     padding: 0 5px;
@@ -95,4 +89,12 @@
     color: red;
     font-size: 12px;
   }
-  
+
+  .page-header{
+    text-align: start;
+    font-weight: 400;
+    color: black;
+  }
+  .material-actions{
+    font-size: 25px;
+  }
