--- a/src/Pages/faculty/student list/studentlist.css
+++ b/src/Pages/faculty/student list/studentlist.css
@@ -65,7 +65,7 @@
   label {
     display: inline-block;
     margin-bottom: 0.5rem;
-    position: absolute;
+    /* position: absolute; */
     top: -10px;
     left: 30px;
     padding: 0 5px;
