--- a/src/components/common/comfaculty/Sidebar/sidebar.css
+++ b/src/components/common/comfaculty/Sidebar/sidebar.css
@@ -1753,7 +1753,7 @@
   }
   
   .form-check-input {
-    position: absolute;
+    /* position: absolute; */
     margin-top: 0.3rem;
     margin-left: -1.25rem;
   }
