--- a/src/Pages/Student/lev notice/stuleavenotice.css
+++ b/src/Pages/Student/lev notice/stuleavenotice.css
@@ -22,14 +22,14 @@ input, select {
     padding: 10px;
     margin-bottom: 20px;
     border-radius: 5px;
-    border: 1px solid #ccc;
+    /* border: 1px solid #ccc; */
     width: 100%;
 }
 textarea {
     padding: 10px;
     margin-bottom: 20px;
     border-radius: 5px;
-    border: 1px solid #ccc;
+    /* border: 1px solid #ccc; */
     width: 100%;
     height: 200px;
 }
@@ -56,9 +56,9 @@ button {
 .leavenotice-form{
     margin-top: 20px;
 }
-.input{
+/* .input{
     border: 1px solid black;
-}
+} */
 
 
 
