--- a/src/Pages/Student/Fees/fees.css
+++ b/src/Pages/Student/Fees/fees.css
@@ -7,13 +7,13 @@ h1 {
     text-align: center;
     margin-top: 10px;
 }
-form {
+.stufee {
     background-color: white;
     padding: 20px;
     border-radius: 10px;
     margin-top: 50px;
 }
-label {
+.lbl-stufee {
     display: block;
     margin-bottom: 10px;
 }
