--- a/src/Pages/Student/lev notice/stuleavenotice.css
+++ b/src/Pages/Student/lev notice/stuleavenotice.css
@@ -8,7 +8,7 @@ h1 {
     text-align: start;
     margin-top: 10px;
 }
-form {
+.stu-leaveform {
     margin-top: 50px;
     display: flex;
     flex-direction: column;
