--- a/src/Pages/faculty/Material/material.css
+++ b/src/Pages/faculty/Material/material.css
@@ -56,16 +56,16 @@
     border-radius: 3px;
   }
   
-  label {
+  .lbladdmaterial {
     display: inline-block;
     margin-bottom: 0.5rem;
     /* position: absolute; */
     top: -10px;
     left: 30px;
     padding: 0 5px;
-    background: #fff;
-    font-size: 12px;
-    color: #ababab;
+    /* background: #fff; */
+    font-size: 15px;
+    color: #000000;
   }
   h6 {
     font-size: 12px;
@@ -104,3 +104,8 @@
   .name-input{
     border: 1.5px solid rgb(198, 198, 198) !important;
   }
+.span-addmaterial{
+  font-size: 20px;
+  font-weight: 400;
+}
+  
