--- a/src/Pages/Student/Feedback/feedform.css
+++ b/src/Pages/Student/Feedback/feedform.css
@@ -1,7 +1,14 @@
 .feed-text{
     text-align: center;
+    margin-left: 20%;
 }
 .feedbackform{
     width:800px;
     margin-left: 200px;
+}
+.feedaero{
+    font-size: 30px;
+    margin-left: 200px;
+
+    color:rgb(15, 14, 14);
 }
