changes many files

--- a/src/Pages/faculty/faculty lave notice/facleave.css
+++ b/src/Pages/faculty/faculty lave notice/facleave.css
@@ -3,7 +3,7 @@
 
 }
 #content-wrapper{
-    background-color: #f8f9fc;
+    /* background-color: #f8f9fc; */
       overflow-x: hidden;
       margin-left: 250px;
   }
@@ -11,6 +11,7 @@
     padding-left: 1.5rem;
     padding-right: 1.5rem;
     padding-top: 50px;
+    /* background-color: white; */
 
 }
 .row{
