--- a/src/Pages/faculty/Material/material.css
+++ b/src/Pages/faculty/Material/material.css
@@ -47,7 +47,7 @@
   .form-group {
     margin-bottom: 1.25rem;
     color: #ababab;
-    background: #fff;
+    /* background: #fff; */
     padding: 0 5px;
   }
   
